# CodeAnalyst-3_4_18_0413-Public

./: .gitattributes  .gitignore  Makefile.in  README.md  RELEASENOTES  aclocal.m4  ca_manual_install.sh  careport.sh  configure  configure.ac  configure.in  configure.scan
src/: Makefile.am  Makefile.in
src/CAPerf/: Makefile.am  README  configure.ac
src/CAPerf/Jenkins/: build.sh
src/CAPerf/m4/: CommonProjectsHdr-config.m4  libcadata-config.m4
src/CAPerf/scripts/: perf-profile.sh  profile-76-C0.sh  run-perf.sh
src/CAPerf/src/: Makefile.am
src/CAPerf/src/CAPerfControl/: CAEvent.cpp  CAEventInternal.cpp  CAPMUSession.cpp  CAPMUSession.h  CAPMUTarget.h  CAPerfCfg.cpp  CAPerfCfg.h  CAPerfEvent.cpp  CAPerfEvent.h  CAPerfProfiler.h  CAProfiler.cpp  CAProfiler.h
src/CAPerf/src/CAPerfData/: CAPerfDataReader.cpp  CAPerfDataWriter.h  caperf-dumper.cpp
src/CAPerf/src/CAPerfTranslate/: CAPerfTranslator.cpp  Makefile.am
src/CAPerf/src/PerfData/: Makefile.am  perfRecName.c
src/CAPerf/src/include/: CAPerfData.h
src/CAPerf/src/libcalog/: Makefile.am  calog_dumper.cpp  calog_types.h
src/CAPerf/src/utils/: Makefile.am
src/CommonProjectsHdr/: CommonProjects_typedefs.h  CommonProjects_typedefs_win.h  Global-CommonProjectsHdr.props
src/ca/: Makefile.am  Makefile.in
src/ca/Configs/DCConfig/: dcconfig.dtd  family15h_1xh  tbp-perf.xml  tbp.xml
src/ca/Configs/DCConfig/GH/: assess.xml  ibs_op_branch.xml  ibs_op_ls.xml  ibs_op_ls_dc.xml  ibs_op_ls_expert.xml  ibs_op_ls_memacc.xml  (+5 more)
src/ca/Configs/ViewConfig/: timer.xml
src/ca/diffgui/: DasmDataListItem.h  DasmDockView.cpp  DiffAnalyst-gui.xpm  DiffAnalystWindow.cpp  DiffAnalystWindow.h  DiffDataListItem.cpp  DiffDataListItem.h  DiffSession.h  NewSessionWizard.cpp  PropDockView.cpp  ViewManageDlg.h  iViewManageDlg.ui  main.cpp
src/ca/events/: Makefile.am  Makefile.in
src/ca/events/public/: family14h-events.xml  gh-events.xml  k8-events.xml
src/ca/gui/: AboutDlg.h  CAQtEvent.h  CfgIbs.cpp  CfgIbs.h  CpuAffinityDlg.cpp  CpuAffinityDlg.h  DCConfig.cpp  DCConfigAPI.h  DaemonMonitorTool.cpp  DaemonMonitorTool.h  DriverMonitorTool.h  EventCfg.cpp  EventCfg.h  EventCfgDlg.cpp  EventMaskEncoding.cpp  ImportController.h  ImportWizard.cpp  ImportWizard.h  ManageCfgs.cpp  NewDiffSessionDlg.cpp  OprofileDaemonDockView.cpp  OprofileDriverDockView.cpp  OprofileDriverDockView.h  PerfEvent.h  PerfEventContainer.cpp  PerfEventContainer.h  ProcessFilterDlg.cpp  ProcessFilterDlg.h  ProfileCollection.h  SeparateCpuIcon.xpm  SessionSettingDlg.cpp  SideBySideIcon.xpm  SrcDensityChart.cpp  SrcDensityChart.h  SrcDensityView.cpp  TaskTab.cpp  TaskTab.h  TbsPropertiesDlg.cpp  TbsPropertiesDlg.h  ViewCfg.cpp  (+46 more)
src/ca/include/: stdafx.h
src/ca/libs/: Makefile.am  Makefile.in
src/ca/libs/libca/: Makefile.am  Makefile.in  catranslate.h  catranslate_gui_display.cpp  catranslate_gui_display.h  dwarfengine.cpp  elfreader.cpp  inlineinstance.h  jclwriter.h  jncfile.cpp  prdreader.cpp  symbolengine.cpp  symbolengine.h  taskinfo.cpp  taskinfo.h
src/ca/libs/libcabba/: Makefile.am  Makefile.in  datatype.h  disassembler.cpp  disassembler.h  smafile.cpp  smafile.h  typedefs.h
src/ca/libs/libopdata/: Makefile.am  Makefile.in  OpreportXMLHandler.h  OpreportXMLStruct.h  opdata_handler.cpp  opsampledata_handler.h
src/ca/libs/liboutput/: Makefile.in  tbsFuncTor.h  tbsStruct.h  tbswriter.h
src/ca/scripts/: Setup.sh  capackage.sh  codeanalyst  cpu_feq_monitor.sh  oprofile_drv_monitor.sh  oprofiled_monitor.sh  rdmsr_ibs.sh  scaling_ondemand_all.sh  scaling_performance_all.sh  scaling_userspace_all.sh
src/ca/utils/: ca_user_manager.cpp
src/ca_agent/: INSTALL  README  configure.ac  configure.scan
src/ca_agent/jnc/: Makefile.am  jnc_jvmti_types.h  jnc_types.h  jncreader.h
src/ca_agent/jvmpi/: jpa.h
src/ca_agent/jvmti/: agent.cpp  bctosrc.cpp  bctosrc.h  inline.cpp  io.cpp  io.h  jpa.h
src/ca_agent/jvmti/testing/: build-64.sh
src/ca_agent/libCAagent/: Makefile.am  Makefile.in  smm.cpp
src/ca_agent/utils/: Makefile.am  ca_agent_cleanup.cpp
src/cakm/: cakm_ver.h  kernel2.6.18  kernel2.6.35  kernel3.2.0
src/cakm/kernel2.6.16/: README  buffer_sync.c  cpu_buffer.c  cpu_buffer.h  event_buffer.c  event_buffer.h  init.c  nmi_int.c  nmi_timer_int.c  op_ca_css_files.c  op_ca_css_files.h  op_counter.h  op_model_athlon.c  op_model_ppro.c  oprof.c  oprof.h  oprofile.h  xenoprof.c
src/cakm/kernel2.6.32/: README  backtrace.c  buffer_sync.c  cpu_buffer.c  cpu_buffer.h  gup.c  nmi_int.c  nmi_timer_int.c  op_ca_css_files.c  op_ca_css_files.h  op_model_amd.c  op_model_p4.c  oprof.c  oprofile.h
src/cakm/kernel2.6.38/: README  backtrace.c  cpu_buffer.c  cpu_buffer.h  event_buffer.c  nmi_int.c  op_ca_css.c  op_ca_css.h  op_ca_css_files.c  op_model_amd.c  oprofile.h  oprofile_files.c  oprofile_stats.c
src/cakm/prebuilds/: README
src/dwarf-20111214/libdwarf/: .gitattributes  .gitignore  Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  configure  configure.ac  configure.scan  dwarf_abbrev.h  dwarf_incl.h
src/libCAdata/: .gitattributes  SConstruct  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.scan  libCAdata-doc.txt
src/libCAdata/CADataDiff/: stdafx.h
src/libCAdata/Jenkins/: JenkinsConfiguration.txt
src/libCAdata/m4/: Makefile.am  Makefile.in
src/libCAdata/src/: CaDataWriter.cpp  CaDataWriter.h  CaProfileInfo.h  CaProfileReader.h  CaProfileWriter.cpp  CaProfileWriter.h  Function.cpp  ImdWriter.cpp  ImdWriter.h  InlineInstance.h  Module.cpp  Module.h  SampleInfo.h  libCAdata.cpp  libCAdata_Process.h
src/libCAdata/unitTest/: stdafx.h  unitTest.cpp  unitTest.vcproj
src/libCAdata/vs/: ReadMe.txt  libCAdata.sln  libCAdata.vcproj  libCAdata.vcxproj  libCAdata.vcxproj.filters
src/oprofile-0.9.6cvs/: Makefile.am
src/oprofile-0.9.6cvs/daemon/: Makefile.am  init.c  opd_anon.c  opd_caagent.h  opd_ibs.c  opd_ibs.h  opd_sfile.c  opd_sfile.h  opd_stats.h  opd_trans.c  opd_trans.h  oprofiled.h
src/oprofile-0.9.6cvs/libop/: op_cpu_type.h  op_hw_config.h  op_hw_specific.h
src/oprofile-0.9.6cvs/m4/: libbfd.m4
(+389 files in other folders)
