
eventsdir=$(prefix)/share/codeanalyst/events/
events_DATA= \
	$(CA_EVENTS_DIR)/k7-events.xml \
	$(CA_EVENTS_DIR)/k8-events.xml \
	$(CA_EVENTS_DIR)/gh-events.xml \
	$(CA_EVENTS_DIR)/gr-events.xml \
	$(CA_EVENTS_DIR)/family12h-events.xml \
	$(CA_EVENTS_DIR)/family14h-events.xml \
	$(CA_EVENTS_DIR)/family15h-events.xml \
	$(CA_EVENTS_DIR)/family15h_1xh-events.xml
